--- a/package.json
+++ b/package.json
@@ -41,4 +41,14 @@
       "last 1 safari version"
     ]
   }
+  "jest": {
+  "testMatch": [
+    "**/__tests__/**/*.{js,jsx,ts,tsx}",
+    "**/*.spec.{js,jsx,ts,tsx}",
+    "**/*.test.{js,jsx,ts,tsx}"
+  ],
+  "testPathIgnorePatterns": [
+    "/node_modules/"
+  ]
+}
 }
