--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,14 +41,4 @@
       "last 1 safari version"
     ]
   }
-  "jest": {
-  "testMatch": [
-    "**/__tests__/**/*.{js,jsx,ts,tsx}",
-    "**/*.spec.{js,jsx,ts,tsx}",
-    "**/*.test.{js,jsx,ts,tsx}"
-  ],
-  "testPathIgnorePatterns": [
-    "/node_modules/"
-  ]
-}
 }
